--- a/helloworld/helloworld.qsf
+++ b/helloworld/helloworld.qsf
@@ -48,4 +48,16 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE helloworld.v
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_location_assignment PIN_R8 -to clk
+set_location_assignment PIN_A15 -to led[0]
+set_location_assignment PIN_A13 -to led[1]
+set_location_assignment PIN_B13 -to led[2]
+set_location_assignment PIN_A11 -to led[3]
+set_location_assignment PIN_D1 -to led[4]
+set_location_assignment PIN_F3 -to led[5]
+set_location_assignment PIN_B1 -to led[6]
+set_location_assignment PIN_L3 -to led[7]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
