--- a/helloworld/helloworld.qsf
+++ b/helloworld/helloworld.qsf
@@ -60,4 +60,14 @@ set_location_assignment PIN_D1 -to led[4]
 set_location_assignment PIN_F3 -to led[5]
 set_location_assignment PIN_B1 -to led[6]
 set_location_assignment PIN_L3 -to led[7]
+set_global_assignment -name ENABLE_OCT_DONE OFF
+set_global_assignment -name STRATIXV_CONFIGURATION_SCHEME "PASSIVE SERIAL"
+set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS_WEAK_PULLUP "AS INPUT TRI-STATED"
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_location_assignment PIN_E1 -to key0
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
