--- a/helloworld/helloworld.qsf
+++ b/helloworld/helloworld.qsf
@@ -70,4 +70,5 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
 set_location_assignment PIN_E1 -to key0
+set_location_assignment PIN_J15 -to key1
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
