--- a/helloworld/helloworld.qsf
+++ b/helloworld/helloworld.qsf
@@ -71,4 +71,8 @@ set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
 set_location_assignment PIN_E1 -to key0
 set_location_assignment PIN_J15 -to key1
+set_location_assignment PIN_M15 -to dipswitch[3]
+set_location_assignment PIN_M1 -to dipswitch[0]
+set_location_assignment PIN_T8 -to dipswitch[1]
+set_location_assignment PIN_B9 -to dipswitch[2]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
